Fix bug #77106: Missing separator in FPM FastCGI errors